--- a/App/SomariKit/SomariKit/Resources/Strings.strings
+++ b/App/SomariKit/SomariKit/Resources/Strings.strings
@@ -1,8 +1,8 @@
 /* 
   Strings.strings
-  Somari
+  SomariKit
 
-  Created by Kazuki Yamamoto on 2019/09/29.
+  Created by Kazuki Yamamoto on 2019/10/13.
   Copyright © 2019 Kazuki Yamamoto. All rights reserved.
 */
 
